quitado enable-preview ya que no es más necesario