@@ -11,10 +11,6 @@ java {
 	sourceCompatibility = "21"
 }
 
-compileJava {
-	options.compilerArgs += ['--enable-preview']
-}
-
 repositories {
 	mavenCentral()
 	maven { url 'https://repo.spring.io/milestone' }
